objects/Lost__c.object
<CustomObject>
    <fields>
        <fullName>APOAccountId__c</fullName>
        <label>APOAccountId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountOwner__c</fullName>
        <label>APOAccountOwner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOOppId__c</fullName>
        <label>APOOppId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lost</relationshipLabel>
        <relationshipName>Lost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Lost</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lost Opp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>